Stylings for Footer: - fixed the gap from the default stylings _posts-and-pages that affected the footer - moved any mixins to _mixins for organization

--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -9,3 +9,43 @@
 @mixin column-width($numberColumns: 3) {
 	width: map-get($columns, $numberColumns) - ( ( $columns__margin * ( $numberColumns - 1 ) ) / $numberColumns );
 }
+
+// Responsive headings resizing
+@mixin responsive-heading($small, $medium, $large) {
+	font-size: $small;
+
+	@media (min-width: $mq_breakpoint_medium) {
+		font-size: $medium;
+	}
+
+	@media (min-width: $mq_breakpoint_large) {
+		font-size: $large;
+	}
+}
+
+// Link colors when on dark background color
+@mixin link-colors-dark() {
+	color: $color__link-dark-bg;
+  
+	&:visited {
+		color: $color__link-visited-dark-bg;
+	}
+  
+	&:hover {
+		color: $color__link-hover-dark-bg;
+	}
+}
+
+// Text color when on dark background color
+@mixin text-color-dark() {
+	color: $color__text-main-dark-bg;
+}
+
+// Responsive footer display
+@mixin responsive-footer() {
+    @media (min-width: $mq_breakpoint_large) {
+		flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+	}
+}
